	- In addition, there's a minimum down time.
	- Projectile types blocked by shields unchanged.
• [Resurrection] Resurrected units regain their old XP.

• [Legion changes] Updates relevant Legion unit stats to reflect Season 3 changes. Changelog is as follows:
	- Martyr speed nerfed to 220 from 230, turnrate nerfed to 750 from 800
	- Mosquito weapon AOE increased to 72 from 70, stockpile time reduced to 1.8 seconds from 2 seconds
	- Spy bot became slightly cheaper and slower, buildtime reduced accordingly first to match other spybots
	- Strider energy cost reduced to 5250 from 5400
	- Scylla 15% health buff in accordance with other battleships
	- Prometheus speed increased to 52 from 51
	- Inferno reloadtime reduced to 7 seconds from 8 seconds
	- Alaris energy cost increased to 850 from 800, buildtime increased to 1650 from 1600, reloadtime slightly increased to 2.3 seconds from 2.25 seconds
	- Wheelie reloadtime increased by 10% in accordance with other scout vehicles
	- Decreased Legion Advanced Solar Collector costs by 3% across the board
	- Factory changes are identical to the other factions. Buildtime updates for units use the same formula as for other T2, T3, and seaplane units in the other two factions.
   - Legion fusion:
      Metal cost: 4900 -> 4000
      Energy cost: 27000 -> 25000
      Buildtime: 80000 -> 66000
      Energy generation: 1200 -> 950
      Health: 5400 -> 4600

# December 2025
• Unified maximum water depth for non-amphib land units to 22 (previously varied between 22-30)
• Unified minimum water depth for non-heavy ships to 8 (previously varied between 8-10)
• [Legion changes] 
	- T2 shipyard, ships, seaplanes, and naval structures added
	- Praetorian shotgun spread reduced 1900->1400
	- Decurion range reduced 380->360, now deals 25% instead of 100% damage vs air
	- Hippocampus (scout ship) now deals 25% instead of 50% damage vs air
	- Small napalm blobs now deal 60dps and last 7s, previous was 45dps for 10s
	- Inferno reloadtime 9s->8s