@@ -120,7 +120,7 @@ return {
 				name = "Pop-Up Long-range g2g Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 1380,
-				reloadtime = 2.9,
+				reloadtime = 3.5,
 				rgbcolor = "0.7 0.7 1.0",
 				soundhit = "xplomed2",
 				soundhitwet = "splsmed",
@@ -130,15 +130,15 @@ return {
 				weaponvelocity = 450,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 10,
+					cluster_number = 8,
 					exclude_preaim = true,
 					smart_priority = true,
 				},
 				damage = {
-					default = 345,
-					lboats = 345,
-					subs = 110,
-					vtol = 110,
+					default = 414,
+					lboats = 414,
+					subs = 132,
+					vtol = 132,
 				},
 			},
 			cluster_munition = {
@@ -160,8 +160,8 @@ return {
 				soundstart = "cannhvy5",
 				weapontype = "Cannon",
 				damage = {
-					default = 65,
-					lboats = 65,
+					default = 105,
+					lboats = 105,
 					subs = 15,
 					vtol = 15,
 				},
@@ -182,7 +182,7 @@ return {
 				name = "Pop-Up Long-range g2g Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 1380,
-				reloadtime = 2.9,
+				reloadtime = 3.5,
 				rgbcolor = "0.7 0.7 1.0",
 				soundhit = "xplomed2",
 				soundhitwet = "splsmed",
@@ -192,15 +192,15 @@ return {
 				weaponvelocity = 450,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 10,
+					cluster_number = 8,
 					exclude_preaim = true,
 					smart_backup = true,
 				},
 				damage = {
-					default = 345,
-					lboats = 345,
-					subs = 110,
-					vtol = 110,
+					default = 414,
+					lboats = 414,
+					subs = 132,
+					vtol = 132,
 				},
 			},
 			smart_trajectory_dummy = {
