@@ -135,7 +135,7 @@ return {
 				name = "Dual Quad-Barrelled Long-Range Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 2100,
-				reloadtime = 6,
+				reloadtime = 8.4,
 				soundhit = "lrpcexplo",
 				soundhitwet = "splshbig",
 				soundstart = "lrpcshot3",
@@ -146,10 +146,10 @@ return {
 				weaponvelocity = 600,
 				customparams = {
 					cluster_def = 'cluster_munition_main',
-					cluster_number = 6,
+					cluster_number = 5,
 				},
 				damage = {
-					default = 250,
+					default = 350,
 					subs = 50,
 				},
 			},
@@ -174,7 +174,7 @@ return {
 				weapontype = "Cannon",
 				reloadtime = 11,
 				damage = {
-					default = 62,
+					default = 105,
 					subs = 25,
 					vtol = 25,
 				},
@@ -197,7 +197,7 @@ return {
 				name = "Heavy Artillery Cluster Plasma Cannon",
 				noselfdamage = true,
 				range = 1600,
-				reloadtime = 1.8,
+				reloadtime = 2.8,
 				rgbcolor = "0.7 0.7 1.0",
 				soundhit = "xplomed2",
 				soundhitwet = "splsmed",
@@ -210,8 +210,8 @@ return {
 					cluster_number = 4,
 				},
 				damage = {
-					default = 175,
-					lboats = 175,
+					default = 250,
+					lboats = 250,
 					subs = 55,
 					vtol = 55,
 				},
@@ -235,8 +235,8 @@ return {
 				soundstart = "cannhvy5",
 				weapontype = "Cannon",
 				damage = {
-					default = 65,
-					lboats = 65,
+					default = 105,
+					lboats = 105,
 					subs = 15,
 					vtol = 15,
 				},
