@@ -199,7 +199,7 @@ return {
 				weaponvelocity = 350,
 				customparams = {
 					cluster_def = 'cluster_munition',
-					cluster_number = 6,
+					cluster_number = 4,
 					exclude_preaim = true,
 				},
 				damage = {
@@ -230,8 +230,8 @@ return {
 				weapontype = "Cannon",
 				weaponvelocity = 450,
 				damage = {
-					default = 65,
-					lboats = 65,
+					default = 105,
+					lboats = 105,
 					subs = 20,
 					vtol = 20,
 				},
