@@ -111,7 +111,7 @@ return {
 				edgeeffectiveness = 0.65,
 				explosiongenerator = "custom:genericshellexplosion-large-bomb",
 				firestarter = 100,
-				flighttime = 3.5,
+				flighttime = 5,
 				impulsefactor = 0.2,
 				metalpershot = 0,
 				model = "leghomingmissile.s3o",
@@ -133,9 +133,9 @@ return {
 				texture2 = "smoketrailbar",
 				texture3 = "null",
 				tolerance = 4000,
-				turnrate = 30000,
+				turnrate = 15000,
 				tracks = true,
-				weaponacceleration = 420,
+				weaponacceleration = 300,
 				weapontimer = 0.2,
 				weapontype = "StarburstLauncher",
 				weaponvelocity = 550,
